-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.4.2, 6.5.0 RC, 6.6
-
None
-
MacOS 13.1 (22C65)
-
-
d1347ebbe (dev), ed34a0b83 (6.5)
Steps to reproduce:
- Load 1.pdf (from attached zip file with sample files) file and search for the word 'test'.
- Open the search tab bar from the left pane
- Load 2.pdf file.
Expected: Another pdf is loaded, no crash.
Actual: The app crashes. See attached video how to reproduce it.
Reproducibility: 100%
- relates to
-
QTQAINFRA-5393
Qt Test Attack - Feb, 2023
-
- Open
-