Clear PDF search results on document page model change

Not clearing the search results leads to crashes when the incoming
page model is larger than the outgoing model, due to internal
state being still in sync with the old document, but the page count
of the new document being used.

Fixes: QTBUG-111067
Pick-to: 6.5
Change-Id: Ic81744ebe0cb7d1a152453721abd7d1b5c5fa2b9
Reviewed-by: Michal Klocek <michal.klocek@qt.io>