src/pdf/qpdfsearchmodel.cpp
@@ -194,9 +194,21 @@ void QPdfSearchModel::setDocument(QPdfDocument *document)
     if (d->document == document)
         return;
 
+    disconnect(d->documentConnection);
+    d->documentConnection = connect(document, &QPdfDocument::pageCountChanged, this,
+                                    &QPdfSearchModel::onDocumentPageCountChanged);
+
     d->document = document;
     d->clearResults();
     emit documentChanged();
+}
+
+void QPdfSearchModel::onDocumentPageCountChanged(int count)
+{
+    Q_UNUSED(count);
+
+    Q_D(QPdfSearchModel);
+    d->clearResults();
 }
 
 void QPdfSearchModel::timerEvent(QTimerEvent *event)
